plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'

	//querydsl 추가
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"

	id 'java'
}

group = 'com.cap.project'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}

	// Log4j2를 위한 logback 의존성 제거
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}

}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'


	// html 파일 변경 시 서버 파일 변경 안해도 build - rebuild로 적용 가능
	implementation 'org.springframework.boot:spring-boot-devtools'

	// MariaDB
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.3'

	// log4j2
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'

	//thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//querydsl 추가
	implementation "com.querydsl:querydsl-jpa:5.0.0"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0"

	//session dB
	implementation("org.springframework.session:spring-session-jdbc")

	//JUnit4 추가
	testImplementation("org.junit.vintage:junit-vintage-engine") {
		exclude group: "org.hamcrest", module: "hamcrest-core"
	}

	// oauth2 client
	implementation("org.springframework.boot:spring-boot-starter-oauth2-client")





}

tasks.named('test') {
	useJUnitPlatform()
}


sourceSets {
	test{
		resources {
			srcDirs "${project.projectDir}/src/test/resources", "${project.projectDir}/src/main/resources"
		}
	}
}

tasks {
	processTestResources {
		duplicatesStrategy = org.gradle.api.file.DuplicatesStrategy.INCLUDE
	}
}

//querydsl 추가 시작
def querydslDir = "$buildDir/generated/querydsl"
querydsl {
	jpa = true
	querydslSourcesDir = querydslDir
}
sourceSets {
	main.java.srcDir querydslDir
}
configurations {
	querydsl.extendsFrom compileClasspath
}
compileQuerydsl {
	options.annotationProcessorPath = configurations.querydsl
}
//querydsl 추가 끝